# infinite-generator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  xraw_format.txt
examples/: 8_corners.vox  8_corners.xraw  chr_knight.xraw  sponge.vox  sponge.xraw
include/: xraw_parser.hpp
include/core/: chunk.hpp
include/graphics/: camera.hpp  imgui_layer.hpp  material.hpp  renderable.hpp  window.hpp
include/opengl/: program.hpp  shader.hpp  vertex_array.hpp
shaders/chunk_material/: fragment.glsl  vertex.glsl
src/: main.cpp  xraw_parser.cpp
src/core/: chunk.cpp
src/graphics/: camera.cpp  imgui_layer.cpp  material.cpp  renderable.cpp  window.cpp
src/opengl/: program.cpp  shader.cpp  vertex_array.cpp
